--- a/src/View/forgotPassword.fxml
+++ b/src/View/forgotPassword.fxml
@@ -1,27 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="605.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ForgotPasswordController">
-   <children>
-      <Label layoutX="201.0" layoutY="85.0" text="Forgot Password">
-         <font>
-            <Font name="Arial Black" size="22.0" />
-         </font>
-      </Label>
-      <Label layoutX="151.0" layoutY="189.0" prefHeight="21.0" prefWidth="227.0" text="Secret Question" />
-      <Label fx:id="lblSecretQuestion" layoutX="151.0" layoutY="223.0" prefHeight="21.0" prefWidth="332.0" text="Display Secret Question">
-         <font>
-            <Font name="System Italic" size="15.0" />
-         </font>
-      </Label>
-      <Label layoutX="151.0" layoutY="261.0" prefHeight="21.0" prefWidth="193.0" text="Secret Question Answer" />
-      <PasswordField fx:id="txtReset" layoutX="151.0" layoutY="298.0" prefHeight="31.0" prefWidth="332.0" />
-      <Button fx:id="btnResetPassword" layoutX="241.0" layoutY="365.0" mnemonicParsing="false" text="Reset Password" textAlignment="CENTER" />
-      <Button layoutX="42.0" layoutY="37.0" mnemonicParsing="false" onAction="#previousPage" text="Back" />
-   </children>
-</AnchorPane>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="581.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="352.0" minWidth="10.0" prefWidth="166.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="621.0" minWidth="10.0" prefWidth="452.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="621.0" minWidth="10.0" prefWidth="146.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button mnemonicParsing="false" text="Back" />
+            <Label alignment="CENTER" prefHeight="45.0" prefWidth="528.0" text="Forgot Password" GridPane.columnIndex="1">
+               <font>
+                  <Font size="30.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </Label>
+         </children>
+         <BorderPane.margin>
+            <Insets top="25.0" />
+         </BorderPane.margin>
+         <padding>
+            <Insets left="20.0" />
+         </padding>
+      </GridPane>
+   </top>
+   <center>
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
+         <padding>
+            <Insets left="30.0" right="30.0" />
+         </padding>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+         <children>
+            <Label fx:id="btnUsername" alignment="CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="358.0" text="Username" textAlignment="CENTER" />
+            <GridPane hgap="20.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="536.0" minWidth="10.0" prefWidth="332.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <TextField prefHeight="31.0" prefWidth="369.0" promptText="Enter Username" />
+               </children>
+               <opaqueInsets>
+                  <Insets left="80.0" />
+               </opaqueInsets>
+               <padding>
+                  <Insets left="80.0" right="80.0" />
+               </padding>
+            </GridPane>
+         </children>
+      </VBox>
+   </center>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="74.0" prefWidth="581.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets top="25.0" />
+         </BorderPane.margin>
+         <children>
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Proceed" textAlignment="CENTER" />
+         </children>
+      </HBox>
+   </bottom>
+</BorderPane>
