--- a/src/View/loginPage.fxml
+++ b/src/View/loginPage.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="526.0"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="526.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
    <top>
       <VBox alignment="CENTER" prefHeight="129.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -47,8 +46,7 @@
             <Button mnemonicParsing="false" onAction="#Login" text="Log In" />
             <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="226.0">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot password?" wrappingWidth="98.84440612792969" />
-                  <Hyperlink onAction="#forgotPassword" prefHeight="10.0" prefWidth="91.0" text="Reset password" />
+                  <Hyperlink onAction="#forgotPassword" prefHeight="29.0" prefWidth="119.0" text="Reset password!" />
                </children>
             </HBox>
          </children>
