--- a/src/View/adminManageEmployees.fxml
+++ b/src/View/adminManageEmployees.fxml
@@ -3,6 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -11,30 +13,26 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.AdminManageEmpController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.AdminManageEmployeeController">
    <top>
-      <GridPane prefHeight="50.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="145.0" minWidth="10.0" prefWidth="114.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="78.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="365.0" minWidth="10.0" prefWidth="365.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="195.0" minWidth="10.0" prefWidth="104.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="68.0" prefWidth="108.0">
+            <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#previousPage" text="Back" />
+                  <Button mnemonicParsing="false" onAction="#previousPage" text="Back" />
                </children>
-               <padding>
-                  <Insets left="25.0" />
-               </padding>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+            <HBox alignment="CENTER" prefHeight="30.0" prefWidth="312.0" GridPane.columnIndex="1">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="45.0" prefWidth="358.0" text="Manage Employees" textAlignment="CENTER">
+                  <Label text="Manage Employees">
                      <font>
                         <Font size="30.0" />
                      </font>
@@ -43,18 +41,33 @@
             </HBox>
          </children>
          <BorderPane.margin>
-            <Insets top="15.0" />
+            <Insets top="25.0" />
          </BorderPane.margin>
+         <padding>
+            <Insets left="20.0" />
+         </padding>
       </GridPane>
    </top>
-   <center>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="17.0" BorderPane.alignment="CENTER">
+   <right>
+      <VBox prefHeight="450.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" prefHeight="21.0" prefWidth="320.0" text="What would you like to do today?" />
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Create Employee" textAlignment="CENTER" />
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Delete Employee" textAlignment="CENTER" />
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Update Employee Details" textAlignment="CENTER" />
+            <Button mnemonicParsing="false" text="Delete" />
+            <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="63.0" text="Add" />
+            <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="63.0" text="Edit" />
          </children>
       </VBox>
+   </right>
+   <center>
+      <TableView fx:id="tblEmployees" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <columns>
+          <TableColumn fx:id="tblEmpId" prefWidth="112.0" text="Employee Id" />
+          <TableColumn fx:id="tblFirstName" prefWidth="139.0" text="First Name" />
+            <TableColumn fx:id="tblLastName" minWidth="1.0" prefWidth="120.0" text="Last Name" />
+            <TableColumn fx:id="tblUsername" prefWidth="137.0" text="Username" />
+        </columns>
+         <BorderPane.margin>
+            <Insets right="10.0" top="15.0" />
+         </BorderPane.margin>
+      </TableView>
    </center>
 </BorderPane>
