--- a/src/View/secretQuestionPage.fxml
+++ b/src/View/secretQuestionPage.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ManageAccountEntranceController">
    <top>
       <GridPane BorderPane.alignment="CENTER">
@@ -66,12 +65,12 @@
                   </Label>
                   <Label fx:id="lblSecQ" text="Secret Question">
                      <font>
-                        <Font name="System Italic" size="20.0" />
+                        <Font name="System Bold" size="20.0" />
                      </font>
                   </Label>
                   <TextField fx:id="txtAnswer" alignment="CENTER" promptText="Enter your answer here!">
                      <VBox.margin>
-                        <Insets left="25.0" right="25.0" />
+                        <Insets left="75.0" right="75.0" />
                      </VBox.margin>
                   </TextField>
                   <Label fx:id="lblStatus" text="Answer status" />
