--- a/src/View/adminManageEmployees.fxml
+++ b/src/View/adminManageEmployees.fxml
@@ -49,21 +49,27 @@
       </GridPane>
    </top>
    <right>
-      <VBox prefHeight="450.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox alignment="BOTTOM_RIGHT" prefHeight="431.0" prefWidth="100.0" spacing="15.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Delete" />
-            <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="63.0" text="Add" />
-            <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="63.0" text="Edit" />
+            <Button mnemonicParsing="false" onAction="#deleteEmployee" text="Delete" />
+            <Button mnemonicParsing="false" onAction="#addEmployee" prefHeight="31.0" prefWidth="63.0" text="Add" />
+            <Button fx:id="btnEdit" mnemonicParsing="false" onAction="#editEmployee" prefHeight="31.0" prefWidth="63.0" text="Edit" />
          </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <BorderPane.margin>
+            <Insets bottom="20.0" right="20.0" />
+         </BorderPane.margin>
       </VBox>
    </right>
    <center>
       <TableView fx:id="tblEmployees" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="tblEmpId" prefWidth="112.0" text="Employee Id" />
-          <TableColumn fx:id="tblFirstName" prefWidth="139.0" text="First Name" />
-            <TableColumn fx:id="tblLastName" minWidth="1.0" prefWidth="120.0" text="Last Name" />
-            <TableColumn fx:id="tblUsername" prefWidth="137.0" text="Username" />
+          <TableColumn fx:id="tblFirstName" prefWidth="135.0" text="First Name" />
+            <TableColumn fx:id="tblLastName" minWidth="1.0" prefWidth="133.0" text="Last Name" />
+            <TableColumn fx:id="tblUsername" prefWidth="148.0" text="Username" />
         </columns>
          <BorderPane.margin>
             <Insets right="10.0" top="15.0" />
