--- a/src/View/employeeMakeBooking.fxml
+++ b/src/View/employeeMakeBooking.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +13,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="716.0" prefWidth="811.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeMakeBookingController">
    <top>
@@ -58,19 +58,25 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="15.0">
                <children>
+                  <Label fx:id="lblWelcome" text="Label" />
                   <GridPane>
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Pick your date" />
-                        <DatePicker prefHeight="31.0" prefWidth="261.0" GridPane.columnIndex="1" />
+                        <DatePicker fx:id="dtpBooking" onAction="#setTables" prefHeight="31.0" prefWidth="261.0" GridPane.columnIndex="2" />
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+                           <children>
+                              <Label alignment="CENTER" text="Pick a date to make a booking " />
+                           </children>
+                        </HBox>
                      </children>
                   </GridPane>
                   <Label text="Booking" />
@@ -91,25 +97,57 @@
                         <Insets left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
                      <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0">
+                        <Rectangle fx:id="Table1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Rectangle>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="1" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.rowIndex="3" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="2" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="3" />
+                        <Rectangle fx:id="Table2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Rectangle>
+                        <Rectangle fx:id="Table5" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Rectangle>
+                        <Rectangle fx:id="Table6" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Rectangle>
+                        <Rectangle fx:id="Table7" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Rectangle>
+                        <Rectangle fx:id="Table8" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Rectangle>
+                        <Rectangle fx:id="Table3" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Rectangle>
+                        <Rectangle fx:id="Table4" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Rectangle>
+                        <Label mouseTransparent="true" pickOnBounds="false" text="Table 1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Label mouseTransparent="true" pickOnBounds="false" text="Table 2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Label mouseTransparent="true" pickOnBounds="false" text="Table 3" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Label mouseTransparent="true" pickOnBounds="false" text="Table 4" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Label mouseTransparent="true" pickOnBounds="false" text="Table 5" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                        <Label mouseTransparent="true" pickOnBounds="false" text="Table 6" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                        <Label mouseTransparent="true" pickOnBounds="false" text="Table 7" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                        <Label mouseTransparent="true" pickOnBounds="false" text="Table 8" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
                      </children>
                   </GridPane>
                </children>
             </VBox>
          </children>
          <BorderPane.margin>
-            <Insets top="15.0" />
+            <Insets top="20.0" />
          </BorderPane.margin>
       </GridPane>
    </center>
