--- a/src/View/loginPage.fxml
+++ b/src/View/loginPage.fxml
@@ -45,10 +45,9 @@
          <children>
             <TextField fx:id="txtUsername" promptText="Enter Username!" />
             <PasswordField fx:id="txtPassword" promptText="Enter Password!" />
-            <Label fx:id="isConnected" text="Database status" />
             <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="226.0">
                <children>
-                  <Hyperlink onAction="#forgotPassword" prefHeight="29.0" prefWidth="119.0" text="Reset password!">
+                  <Hyperlink alignment="CENTER_RIGHT" onAction="#forgotPassword" prefHeight="27.0" prefWidth="148.0" text="Reset password!">
                      <font>
                         <Font name="System Italic" size="13.0" />
                      </font>
@@ -56,6 +55,9 @@
                         <Insets />
                      </HBox.margin></Hyperlink>
                </children>
+               <VBox.margin>
+                  <Insets top="-10.0" />
+               </VBox.margin>
             </HBox>
             <Button fx:id="btnLogIn" alignment="CENTER" mnemonicParsing="false" onAction="#Login" prefHeight="38.0" prefWidth="67.0" text="Log In" />
          </children>
