--- a/src/View/employeeMakeBooking.fxml
+++ b/src/View/employeeMakeBooking.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="716.0" prefWidth="811.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeMakeBookingController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="716.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeMakeBookingController">
    <top>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -26,7 +26,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <BorderPane.margin>
-            <Insets top="20.0" />
+            <Insets top="25.0" />
          </BorderPane.margin>
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0">
@@ -79,7 +79,20 @@
                         </HBox>
                      </children>
                   </GridPane>
-                  <Label text="Booking" />
+                  <GridPane>
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label fx:id="lblCurrentBooking" text="Booking Status" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Button fx:id="btnManageBooking" mnemonicParsing="false" onAction="#manageBooking" prefHeight="31.0" prefWidth="147.0" text="Manage Booking" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.valignment="CENTER" />
+                     </children>
+                  </GridPane>
                   <GridPane alignment="CENTER" hgap="15.0" prefHeight="436.0" prefWidth="801.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -151,4 +164,7 @@
          </BorderPane.margin>
       </GridPane>
    </center>
+   <padding>
+      <Insets left="30.0" right="30.0" />
+   </padding>
 </BorderPane>
