--- a/src/View/adminLockdownCondition.fxml
+++ b/src/View/adminLockdownCondition.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -13,7 +15,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.AdminLockdownController">
    <top>
-      <GridPane prefHeight="68.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <GridPane prefHeight="43.0" prefWidth="600.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="195.0" minWidth="10.0" prefWidth="130.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="335.0" minWidth="10.0" prefWidth="320.0" />
@@ -24,9 +26,6 @@
         </rowConstraints>
          <children>
             <HBox alignment="CENTER" prefHeight="31.0" prefWidth="146.0">
-               <children>
-                  <Button fx:id="btnBack" mnemonicParsing="false" onAction="#previousPage" text="Back" />
-               </children>
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -47,16 +46,55 @@
                </opaqueInsets>
             </HBox>
          </children>
+         <BorderPane.margin>
+            <Insets top="20.0" />
+         </BorderPane.margin>
       </GridPane>
    </top>
    <center>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="15.0" BorderPane.alignment="CENTER">
          <children>
-            <Label prefHeight="21.0" prefWidth="344.0" text="What lockdown condition would you like to set?" />
-            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" text="No Restrictions" />
-            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" text="Social Distancing" />
-            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" text="Total Lockdown" />
+            <GridPane hgap="15.0" vgap="15.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <DatePicker fx:id="dtpLockdownDate" prefHeight="31.0" prefWidth="235.0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                  <ComboBox fx:id="cBoxType" prefHeight="31.0" prefWidth="235.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label text="Date for Restriction" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <Label text="Type of Restriciction" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+               </children>
+            </GridPane>
          </children>
+         <BorderPane.margin>
+            <Insets top="5.0" />
+         </BorderPane.margin>
+         <padding>
+            <Insets bottom="14.0" top="15.0" />
+         </padding>
       </VBox>
    </center>
+   <bottom>
+      <GridPane hgap="15.0" prefHeight="47.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button fx:id="btnCancel" mnemonicParsing="false" onAction="#cancel" prefHeight="35.0" prefWidth="92.0" text="Cancel" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
+            <Button fx:id="btnConfirm" mnemonicParsing="false" onAction="#setLockdown" prefHeight="35.0" prefWidth="92.0" text="Confirm" GridPane.columnIndex="1" />
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="15.0" />
+         </BorderPane.margin>
+      </GridPane>
+   </bottom>
 </BorderPane>
