--- a/src/View/adminDashboard.fxml
+++ b/src/View/adminDashboard.fxml
@@ -58,7 +58,7 @@
             <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#manageAdminAccount" prefHeight="50.0" prefWidth="158.0" text="Manage Account" textAlignment="CENTER" />
             <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#manageEmployee" prefHeight="50.0" prefWidth="158.0" text="Manage Employee" textAlignment="CENTER" />
             <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="158.0" text="Graphical Visual" textAlignment="CENTER" />
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="158.0" text="Generate Report" textAlignment="CENTER" />
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#generateCSV" prefHeight="50.0" prefWidth="158.0" text="Generate Report" textAlignment="CENTER" />
          </children>
       </VBox>
    </center>
